# subxt-poc

./: Cargo.toml
src/: main.rs  metadata.scale
