[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.21", features=["full"]}
subxt = {git="https://github.com/Polkadex-Substrate/subxt.git", branch = "polkadot-v0.9.28"}
polkadex-primitives = {git="https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = "polkadot-v0.9.28" }
sp-core = { branch = "polkadot-v0.9.28", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "polkadot-v0.9.28", git = "https://github.com/paritytech/substrate.git" }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }